<resources>
    <string name="app_name">Dicoding Course</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="dial_number">Dial Number</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\nFHD AMOLED at 441ppi\n2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\nStandby time (LTE): up to 19 days\nTalk time (3g/WCDMA): up to 26 hours\nInternet use time (Wi-Fi): up to 13 hours\nInternet use time (LTE): up to 13 hours\nVideo playback: up to 13 hours\nAudio playback (via headset): up to 110 hours\nFast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Huda Putra Santosa</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">Rp. 1.500.000</string>
    <string name="dummy_photos">5 photos</string>
    <string name="view_group">View Group</string>
    <string name="recycler_view">recycler_view</string>
    <string name="browser">Portofolio saya</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="cardview">CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="masuk_zona_fragment">Masuk Zona Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Machester United?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>